etapa_3/parser.output
Terminals unused in grammar

    TK_TIPO
    TK_ER


Grammar

    0 $accept: programa $end

    1 programa: ε
    2         | lista_elementos ';'

    3 lista_elementos: elemento
    4                | lista_elementos ',' elemento

    5 elemento: definicao_funcao
    6         | declaracao_variavel_global

    7 definicao_funcao: TK_ID TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos

    8 tipo: TK_DECIMAL
    9     | TK_INTEIRO

   10 parametros_opt: ε
   11               | TK_COM lista_parametros
   12               | lista_parametros

   13 lista_parametros: parametro
   14                 | lista_parametros ',' parametro

   15 parametro: TK_ID TK_ATRIB tipo

   16 bloco_comandos: '[' lista_comandos_opt ']'

   17 lista_comandos_opt: ε
   18                   | lista_comandos

   19 lista_comandos: comando_simples
   20               | lista_comandos comando_simples

   21 comando_simples: bloco_comandos
   22                | declaracao_variavel_local
   23                | comando_atribuicao
   24                | chamada_funcao
   25                | comando_retorno
   26                | comando_condicional
   27                | comando_enquanto

   28 declaracao_variavel_global: TK_VAR TK_ID TK_ATRIB tipo

   29 declaracao_variavel_local: TK_VAR TK_ID TK_ATRIB tipo inicializacao_opt

   30 inicializacao_opt: ε
   31                  | TK_COM literal

   32 literal: TK_LI_INTEIRO
   33        | TK_LI_DECIMAL

   34 comando_atribuicao: TK_ID TK_ATRIB expressao

   35 chamada_funcao: TK_ID '(' argumentos_opt ')'

   36 argumentos_opt: ε
   37               | lista_argumentos

   38 lista_argumentos: expressao
   39                 | lista_argumentos ',' expressao

   40 comando_retorno: TK_RETORNA expressao TK_ATRIB tipo

   41 comando_condicional: TK_SE '(' expressao ')' bloco_comandos senao_opt

   42 senao_opt: ε
   43          | TK_SENAO bloco_comandos

   44 comando_enquanto: TK_ENQUANTO '(' expressao ')' bloco_comandos

   45 expressao: expressao_or

   46 expressao_or: expressao_and
   47             | expressao_or '|' expressao_and

   48 expressao_and: expressao_eq
   49              | expressao_and '&' expressao_eq

   50 expressao_eq: expressao_rel
   51             | expressao_eq TK_OC_EQ expressao_rel
   52             | expressao_eq TK_OC_NE expressao_rel

   53 expressao_rel: expressao_add
   54              | expressao_rel '<' expressao_add
   55              | expressao_rel '>' expressao_add
   56              | expressao_rel TK_OC_LE expressao_add
   57              | expressao_rel TK_OC_GE expressao_add

   58 expressao_add: expressao_mul
   59              | expressao_add '+' expressao_mul
   60              | expressao_add '-' expressao_mul

   61 expressao_mul: expressao_unaria
   62              | expressao_mul '*' expressao_unaria
   63              | expressao_mul '/' expressao_unaria
   64              | expressao_mul '%' expressao_unaria

   65 expressao_unaria: expressao_primaria
   66                 | '!' expressao_unaria
   67                 | '+' expressao_unaria
   68                 | '-' expressao_unaria

   69 expressao_primaria: chamada_funcao
   70                   | literal
   71                   | TK_ID
   72                   | '(' expressao ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 66
    '%' (37) 64
    '&' (38) 49
    '(' (40) 35 41 44 72
    ')' (41) 35 41 44 72
    '*' (42) 62
    '+' (43) 59 67
    ',' (44) 4 14 39
    '-' (45) 60 68
    '/' (47) 63
    ';' (59) 2
    '<' (60) 54
    '>' (62) 55
    '[' (91) 16
    ']' (93) 16
    '|' (124) 47
    error (256)
    TK_TIPO (258)
    TK_VAR (259) 28 29
    TK_SENAO (260) 43
    TK_DECIMAL (261) 8
    TK_SE (262) 41
    TK_INTEIRO (263) 9
    TK_ATRIB (264) 7 15 28 29 34 40
    TK_RETORNA (265) 40
    TK_SETA (266) 7
    TK_ENQUANTO (267) 44
    TK_COM (268) 11 31
    TK_OC_LE (269) 56
    TK_OC_GE (270) 57
    TK_OC_EQ (271) 51
    TK_OC_NE (272) 52
    TK_ID <valor_lexico> (273) 7 15 28 29 34 35 71
    TK_LI_INTEIRO <valor_lexico> (274) 32
    TK_LI_DECIMAL <valor_lexico> (275) 33
    TK_ER (276)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa <node> (39)
        on left: 1 2
        on right: 0
    lista_elementos <node> (40)
        on left: 3 4
        on right: 2 4
    elemento <node> (41)
        on left: 5 6
        on right: 3 4
    definicao_funcao <node> (42)
        on left: 7
        on right: 5
    tipo <node> (43)
        on left: 8 9
        on right: 7 15 28 29 40
    parametros_opt <node> (44)
        on left: 10 11 12
        on right: 7
    lista_parametros <node> (45)
        on left: 13 14
        on right: 11 12 14
    parametro <node> (46)
        on left: 15
        on right: 13 14
    bloco_comandos <node> (47)
        on left: 16
        on right: 7 21 41 43 44
    lista_comandos_opt <node> (48)
        on left: 17 18
        on right: 16
    lista_comandos <node> (49)
        on left: 19 20
        on right: 18 20
    comando_simples <node> (50)
        on left: 21 22 23 24 25 26 27
        on right: 19 20
    declaracao_variavel_global <node> (51)
        on left: 28
        on right: 6
    declaracao_variavel_local <node> (52)
        on left: 29
        on right: 22
    inicializacao_opt <node> (53)
        on left: 30 31
        on right: 29
    literal <node> (54)
        on left: 32 33
        on right: 31 70
    comando_atribuicao <node> (55)
        on left: 34
        on right: 23
    chamada_funcao <node> (56)
        on left: 35
        on right: 24 69
    argumentos_opt <node> (57)
        on left: 36 37
        on right: 35
    lista_argumentos <node> (58)
        on left: 38 39
        on right: 37 39
    comando_retorno <node> (59)
        on left: 40
        on right: 25
    comando_condicional <node> (60)
        on left: 41
        on right: 26
    senao_opt <node> (61)
        on left: 42 43
        on right: 41
    comando_enquanto <node> (62)
        on left: 44
        on right: 27
    expressao <node> (63)
        on left: 45
        on right: 34 38 39 40 41 44 72
    expressao_or <node> (64)
        on left: 46 47
        on right: 45 47
    expressao_and <node> (65)
        on left: 48 49
        on right: 46 47 49
    expressao_eq <node> (66)
        on left: 50 51 52
        on right: 48 49 51 52
    expressao_rel <node> (67)
        on left: 53 54 55 56 57
        on right: 50 51 52 54 55 56 57
    expressao_add <node> (68)
        on left: 58 59 60
        on right: 53 54 55 56 57 59 60
    expressao_mul <node> (69)
        on left: 61 62 63 64
        on right: 58 59 60 62 63 64
    expressao_unaria <node> (70)
        on left: 65 66 67 68
        on right: 61 62 63 64 66 67 68
    expressao_primaria <node> (71)
        on left: 69 70 71 72
        on right: 65


State 0

    0 $accept: • programa $end
    1 programa: ε •  [$end]
    2         | • lista_elementos ';'
    3 lista_elementos: • elemento
    4                | • lista_elementos ',' elemento
    5 elemento: • definicao_funcao
    6         | • declaracao_variavel_global
    7 definicao_funcao: • TK_ID TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos
   28 declaracao_variavel_global: • TK_VAR TK_ID TK_ATRIB tipo

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    $default  reduce using rule 1 (programa)

    programa                    go to state 3
    lista_elementos             go to state 4
    elemento                    go to state 5
    definicao_funcao            go to state 6
    declaracao_variavel_global  go to state 7


State 1

   28 declaracao_variavel_global: TK_VAR • TK_ID TK_ATRIB tipo

    TK_ID  shift, and go to state 8


State 2

    7 definicao_funcao: TK_ID • TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos

    TK_SETA  shift, and go to state 9


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 10


State 4

    2 programa: lista_elementos • ';'
    4 lista_elementos: lista_elementos • ',' elemento

    ';'  shift, and go to state 11
    ','  shift, and go to state 12


State 5

    3 lista_elementos: elemento •

    $default  reduce using rule 3 (lista_elementos)


State 6

    5 elemento: definicao_funcao •

    $default  reduce using rule 5 (elemento)


State 7

    6 elemento: declaracao_variavel_global •

    $default  reduce using rule 6 (elemento)


State 8

   28 declaracao_variavel_global: TK_VAR TK_ID • TK_ATRIB tipo

    TK_ATRIB  shift, and go to state 13


State 9

    7 definicao_funcao: TK_ID TK_SETA • tipo parametros_opt TK_ATRIB bloco_comandos
    8 tipo: • TK_DECIMAL
    9     | • TK_INTEIRO

    TK_DECIMAL  shift, and go to state 14
    TK_INTEIRO  shift, and go to state 15

    tipo  go to state 16


State 10

    0 $accept: programa $end •

    $default  accept


State 11

    2 programa: lista_elementos ';' •

    $default  reduce using rule 2 (programa)


State 12

    4 lista_elementos: lista_elementos ',' • elemento
    5 elemento: • definicao_funcao
    6         | • declaracao_variavel_global
    7 definicao_funcao: • TK_ID TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos
   28 declaracao_variavel_global: • TK_VAR TK_ID TK_ATRIB tipo

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    elemento                    go to state 17
    definicao_funcao            go to state 6
    declaracao_variavel_global  go to state 7


State 13

    8 tipo: • TK_DECIMAL
    9     | • TK_INTEIRO
   28 declaracao_variavel_global: TK_VAR TK_ID TK_ATRIB • tipo

    TK_DECIMAL  shift, and go to state 14
    TK_INTEIRO  shift, and go to state 15

    tipo  go to state 18


State 14

    8 tipo: TK_DECIMAL •

    $default  reduce using rule 8 (tipo)


State 15

    9 tipo: TK_INTEIRO •

    $default  reduce using rule 9 (tipo)


State 16

    7 definicao_funcao: TK_ID TK_SETA tipo • parametros_opt TK_ATRIB bloco_comandos
   10 parametros_opt: ε •  [TK_ATRIB]
   11               | • TK_COM lista_parametros
   12               | • lista_parametros
   13 lista_parametros: • parametro
   14                 | • lista_parametros ',' parametro
   15 parametro: • TK_ID TK_ATRIB tipo

    TK_COM  shift, and go to state 19
    TK_ID   shift, and go to state 20

    $default  reduce using rule 10 (parametros_opt)

    parametros_opt    go to state 21
    lista_parametros  go to state 22
    parametro         go to state 23


State 17

    4 lista_elementos: lista_elementos ',' elemento •

    $default  reduce using rule 4 (lista_elementos)


State 18

   28 declaracao_variavel_global: TK_VAR TK_ID TK_ATRIB tipo •

    $default  reduce using rule 28 (declaracao_variavel_global)


State 19

   11 parametros_opt: TK_COM • lista_parametros
   13 lista_parametros: • parametro
   14                 | • lista_parametros ',' parametro
   15 parametro: • TK_ID TK_ATRIB tipo

    TK_ID  shift, and go to state 20

    lista_parametros  go to state 24
    parametro         go to state 23


State 20

   15 parametro: TK_ID • TK_ATRIB tipo

    TK_ATRIB  shift, and go to state 25


State 21

    7 definicao_funcao: TK_ID TK_SETA tipo parametros_opt • TK_ATRIB bloco_comandos

    TK_ATRIB  shift, and go to state 26


State 22

   12 parametros_opt: lista_parametros •  [TK_ATRIB]
   14 lista_parametros: lista_parametros • ',' parametro

    ','  shift, and go to state 27

    $default  reduce using rule 12 (parametros_opt)


State 23

   13 lista_parametros: parametro •

    $default  reduce using rule 13 (lista_parametros)


State 24

   11 parametros_opt: TK_COM lista_parametros •  [TK_ATRIB]
   14 lista_parametros: lista_parametros • ',' parametro

    ','  shift, and go to state 27

    $default  reduce using rule 11 (parametros_opt)


State 25

    8 tipo: • TK_DECIMAL
    9     | • TK_INTEIRO
   15 parametro: TK_ID TK_ATRIB • tipo

    TK_DECIMAL  shift, and go to state 14
    TK_INTEIRO  shift, and go to state 15

    tipo  go to state 28


State 26

    7 definicao_funcao: TK_ID TK_SETA tipo parametros_opt TK_ATRIB • bloco_comandos
   16 bloco_comandos: • '[' lista_comandos_opt ']'

    '['  shift, and go to state 29

    bloco_comandos  go to state 30


State 27

   14 lista_parametros: lista_parametros ',' • parametro
   15 parametro: • TK_ID TK_ATRIB tipo

    TK_ID  shift, and go to state 20

    parametro  go to state 31


State 28

   15 parametro: TK_ID TK_ATRIB tipo •

    $default  reduce using rule 15 (parametro)


State 29

   16 bloco_comandos: • '[' lista_comandos_opt ']'
   16               | '[' • lista_comandos_opt ']'
   17 lista_comandos_opt: ε •  [']']
   18                   | • lista_comandos
   19 lista_comandos: • comando_simples
   20               | • lista_comandos comando_simples
   21 comando_simples: • bloco_comandos
   22                | • declaracao_variavel_local
   23                | • comando_atribuicao
   24                | • chamada_funcao
   25                | • comando_retorno
   26                | • comando_condicional
   27                | • comando_enquanto
   29 declaracao_variavel_local: • TK_VAR TK_ID TK_ATRIB tipo inicializacao_opt
   34 comando_atribuicao: • TK_ID TK_ATRIB expressao
   35 chamada_funcao: • TK_ID '(' argumentos_opt ')'
   40 comando_retorno: • TK_RETORNA expressao TK_ATRIB tipo
   41 comando_condicional: • TK_SE '(' expressao ')' bloco_comandos senao_opt
   44 comando_enquanto: • TK_ENQUANTO '(' expressao ')' bloco_comandos

    TK_VAR       shift, and go to state 32
    TK_SE        shift, and go to state 33
    TK_RETORNA   shift, and go to state 34
    TK_ENQUANTO  shift, and go to state 35
    TK_ID        shift, and go to state 36
    '['          shift, and go to state 29

    $default  reduce using rule 17 (lista_comandos_opt)

    bloco_comandos             go to state 37
    lista_comandos_opt         go to state 38
    lista_comandos             go to state 39
    comando_simples            go to state 40
    declaracao_variavel_local  go to state 41
    comando_atribuicao         go to state 42
    chamada_funcao             go to state 43
    comando_retorno            go to state 44
    comando_condicional        go to state 45
    comando_enquanto           go to state 46


State 30

    7 definicao_funcao: TK_ID TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos •

    $default  reduce using rule 7 (definicao_funcao)


State 31

   14 lista_parametros: lista_parametros ',' parametro •

    $default  reduce using rule 14 (lista_parametros)


State 32

   29 declaracao_variavel_local: TK_VAR • TK_ID TK_ATRIB tipo inicializacao_opt

    TK_ID  shift, and go to state 47


State 33

   41 comando_condicional: TK_SE • '(' expressao ')' bloco_comandos senao_opt

    '('  shift, and go to state 48


State 34

   32 literal: • TK_LI_INTEIRO
   33        | • TK_LI_DECIMAL
   35 chamada_funcao: • TK_ID '(' argumentos_opt ')'
   40 comando_retorno: TK_RETORNA • expressao TK_ATRIB tipo
   45 expressao: • expressao_or
   46 expressao_or: • expressao_and
   47             | • expressao_or '|' expressao_and
   48 expressao_and: • expressao_eq
   49              | • expressao_and '&' expressao_eq
   50 expressao_eq: • expressao_rel
   51             | • expressao_eq TK_OC_EQ expressao_rel
   52             | • expressao_eq TK_OC_NE expressao_rel
   53 expressao_rel: • expressao_add
   54              | • expressao_rel '<' expressao_add
   55              | • expressao_rel '>' expressao_add
   56              | • expressao_rel TK_OC_LE expressao_add
   57              | • expressao_rel TK_OC_GE expressao_add
   58 expressao_add: • expressao_mul
   59              | • expressao_add '+' expressao_mul
   60              | • expressao_add '-' expressao_mul
   61 expressao_mul: • expressao_unaria
   62              | • expressao_mul '*' expressao_unaria
   63              | • expressao_mul '/' expressao_unaria
   64              | • expressao_mul '%' expressao_unaria
   65 expressao_unaria: • expressao_primaria
   66                 | • '!' expressao_unaria
   67                 | • '+' expressao_unaria
   68                 | • '-' expressao_unaria
   69 expressao_primaria: • chamada_funcao
   70                   | • literal
   71                   | • TK_ID
   72                   | • '(' expressao ')'

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal             go to state 56
    chamada_funcao      go to state 57
    expressao           go to state 58
    expressao_or        go to state 59
    expressao_and       go to state 60
    expressao_eq        go to state 61
    expressao_rel       go to state 62
    expressao_add       go to state 63
    expressao_mul       go to state 64
    expressao_unaria    go to state 65
    expressao_primaria  go to state 66


State 35

   44 comando_enquanto: TK_ENQUANTO • '(' expressao ')' bloco_comandos

    '('  shift, and go to state 67


State 36

   34 comando_atribuicao: TK_ID • TK_ATRIB expressao
   35 chamada_funcao: TK_ID • '(' argumentos_opt ')'

    TK_ATRIB  shift, and go to state 68
    '('       shift, and go to state 69


State 37

   21 comando_simples: bloco_comandos •

    $default  reduce using rule 21 (comando_simples)


State 38

   16 bloco_comandos: '[' lista_comandos_opt • ']'

    ']'  shift, and go to state 70


State 39

   16 bloco_comandos: • '[' lista_comandos_opt ']'
   18 lista_comandos_opt: lista_comandos •  [']']
   20 lista_comandos: lista_comandos • comando_simples
   21 comando_simples: • bloco_comandos
   22                | • declaracao_variavel_local
   23                | • comando_atribuicao
   24                | • chamada_funcao
   25                | • comando_retorno
   26                | • comando_condicional
   27                | • comando_enquanto
   29 declaracao_variavel_local: • TK_VAR TK_ID TK_ATRIB tipo inicializacao_opt
   34 comando_atribuicao: • TK_ID TK_ATRIB expressao
   35 chamada_funcao: • TK_ID '(' argumentos_opt ')'
   40 comando_retorno: • TK_RETORNA expressao TK_ATRIB tipo
   41 comando_condicional: • TK_SE '(' expressao ')' bloco_comandos senao_opt
   44 comando_enquanto: • TK_ENQUANTO '(' expressao ')' bloco_comandos

    TK_VAR       shift, and go to state 32
    TK_SE        shift, and go to state 33
    TK_RETORNA   shift, and go to state 34
    TK_ENQUANTO  shift, and go to state 35
    TK_ID        shift, and go to state 36
    '['          shift, and go to state 29

    $default  reduce using rule 18 (lista_comandos_opt)

    bloco_comandos             go to state 37
    comando_simples            go to state 71
    declaracao_variavel_local  go to state 41
    comando_atribuicao         go to state 42
    chamada_funcao             go to state 43
    comando_retorno            go to state 44
    comando_condicional        go to state 45
    comando_enquanto           go to state 46


State 40

   19 lista_comandos: comando_simples •

    $default  reduce using rule 19 (lista_comandos)


State 41

   22 comando_simples: declaracao_variavel_local •

    $default  reduce using rule 22 (comando_simples)


State 42

   23 comando_simples: comando_atribuicao •

    $default  reduce using rule 23 (comando_simples)


State 43

   24 comando_simples: chamada_funcao •

    $default  reduce using rule 24 (comando_simples)


State 44

   25 comando_simples: comando_retorno •

    $default  reduce using rule 25 (comando_simples)


State 45

   26 comando_simples: comando_condicional •

    $default  reduce using rule 26 (comando_simples)


State 46

   27 comando_simples: comando_enquanto •

    $default  reduce using rule 27 (comando_simples)


State 47

   29 declaracao_variavel_local: TK_VAR TK_ID • TK_ATRIB tipo inicializacao_opt

    TK_ATRIB  shift, and go to state 72


State 48

   32 literal: • TK_LI_INTEIRO
   33        | • TK_LI_DECIMAL
   35 chamada_funcao: • TK_ID '(' argumentos_opt ')'
   41 comando_condicional: TK_SE '(' • expressao ')' bloco_comandos senao_opt
   45 expressao: • expressao_or
   46 expressao_or: • expressao_and
   47             | • expressao_or '|' expressao_and
   48 expressao_and: • expressao_eq
   49              | • expressao_and '&' expressao_eq
   50 expressao_eq: • expressao_rel
   51             | • expressao_eq TK_OC_EQ expressao_rel
   52             | • expressao_eq TK_OC_NE expressao_rel
   53 expressao_rel: • expressao_add
   54              | • expressao_rel '<' expressao_add
   55              | • expressao_rel '>' expressao_add
   56              | • expressao_rel TK_OC_LE expressao_add
   57              | • expressao_rel TK_OC_GE expressao_add
   58 expressao_add: • expressao_mul
   59              | • expressao_add '+' expressao_mul
   60              | • expressao_add '-' expressao_mul
   61 expressao_mul: • expressao_unaria
   62              | • expressao_mul '*' expressao_unaria
   63              | • expressao_mul '/' expressao_unaria
   64              | • expressao_mul '%' expressao_unaria
   65 expressao_unaria: • expressao_primaria
   66                 | • '!' expressao_unaria
   67                 | • '+' expressao_unaria
   68                 | • '-' expressao_unaria
   69 expressao_primaria: • chamada_funcao
   70                   | • literal
   71                   | • TK_ID
   72                   | • '(' expressao ')'

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal             go to state 56
    chamada_funcao      go to state 57
    expressao           go to state 73
    expressao_or        go to state 59
    expressao_and       go to state 60
    expressao_eq        go to state 61
    expressao_rel       go to state 62
    expressao_add       go to state 63
    expressao_mul       go to state 64
    expressao_unaria    go to state 65
    expressao_primaria  go to state 66


State 49
